2007-08-20  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Added Undo and Redo actions to
	  GUI.
	* Monodoc.Editor.Gui/DocumentActions.cs: Added some code lines to help
	  debugging undo functionality
	* Monodoc.Editor.Gui/DocumentBuffer.cs: Using UndoManager in
	  DocumentBuffer.

2007-08-02  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/Test/TestUtils.cs: Minor change.
	* Monodoc.Editor.Gui/Test/TestDocumentTagTable.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added
	  TestDocumentTagTable that has the test units for the
	  DocumentTagTable class.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Raise an Argument Exception
	  if the tag name is not a valid dynamic tag in CreateDynamicTag
	  method.

2007-08-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/Test/TestUtils.cs: Added test units for GetLastTag
	  and AddString methods.
	* Monodoc.Editor.Gui/Utils.cs: Moving AddString, AddNewLine and
	  AddPadding methods to DocumentUtils helper class.

2007-07-16  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentTagTable.cs: Some comments about tags.
	* Monodoc.Editor.Gui/DocumentTab.cs: Minor changes, removed title
	  member.

2007-07-13  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Some code refactoring
	  around the Serialize method. Added two new methods to handle the
	  initialization of the two ArrayList: one list has all the tags that
	  begin in a given iterator and the second list has all the tags that
	  end in a given iterator.

2007-07-10  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Minor modifications
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Made the "summary" tag
	  editable.

2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 
