@@ -75,46 +75,6 @@ public class DocumentBuffer : TextBuffer {
 		}
 	}
 	
-//	protected override void OnInsertText (TextIter pos, string text)
-//	{
-//		int offset = pos.Offset + text.Length;
-//		
-//		// Call base method to insert text, we only handle special cases in this override.
-//		base.OnInsertText (pos, text);
-//		
-//		TextIter previousIter = GetIterAtOffset (offset - 1); // Previous is the iter before the insert offset.
-//		TextIter startIter = GetIterAtOffset (offset);
-//		TextIter endIter = GetIterAtOffset (offset + text.Length);
-//		
-//		// Only handle special inserting cases when we have a fully loaded document.
-//		if (document_loaded) {
-//			#if DEBUG
-//			Console.WriteLine ("DEBUG: Inserting: {0}", text);
-//			Console.WriteLine ("DEBUG: Start Offset: {0} Char: {1}", startIter.Offset, startIter.Char);
-//			Console.WriteLine ("DEBUG: End Offset: {0} Char: {1}", endIter.Offset, endIter.Char);
-//			#endif
-//			
-//			TextTag lastEnd = DocumentUtils.GetLastTag (endIter);
-//			TextTag lastPrevious =  DocumentUtils.GetLastTag (previousIter);
-//			
-//			if (endIter.BeginsTag (lastEnd) && lastEnd.Editable) {
-//				#if DEBUG
-//				Console.WriteLine ("DEBUG: Inserting text at start of editable region.");
-//				Console.WriteLine ("DEBUG: Tag Name: {0} Char: {1}", lastEnd.Name, endIter.Char);
-//				#endif
-//				
-//				ApplyTag (lastEnd, startIter, endIter);
-//			} else if (DocumentUtils.TagEndsHere (lastPrevious, previousIter, startIter) && lastPrevious.Editable) {
-//				#if DEBUG
-//				Console.WriteLine ("DEBUG: Inserting text at end of editable region.");
-//				Console.WriteLine ("DEBUG: Tag Name: {0} Char: {1}", lastPrevious.Name, previousIter.Char);
-//				#endif
-//
-//				ApplyTag (lastPrevious, startIter, endIter);
-//			}
-//		}
-//	}
-
 	protected override void OnDeleteRange (TextIter startIter, TextIter endIter)
 	{
 		Console.WriteLine ("DEBUG: Deleting range");
